--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rethinkdb_express",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "",
     "main": "server.js",
     "scripts": {
@@ -17,5 +17,19 @@
     "bugs": {
         "url": "https://github.com/b-rucel/rethinkdb_express/issues"
     },
-    "homepage": "https://github.com/b-rucel/rethinkdb_express#readme"
+    "homepage": "https://github.com/b-rucel/rethinkdb_express#readme",
+    "dependencies": {
+        "bcrypt": "^1.0.2",
+        "bluebird": "^3.5.0",
+        "body-parser": "^1.17.1",
+        "cors": "^2.8.1",
+        "dotenv": "^4.0.0",
+        "express": "^4.15.2",
+        "helmet": "^3.5.0",
+        "jwt-simple": "^0.5.1",
+        "moment": "^2.18.1",
+        "morgan": "^1.8.1",
+        "nodemon": "^1.11.0",
+        "rethinkdb": "^2.3.3"
+    }
 }
